fault-injection.yaml
apiVersion: networking.istio.io/v1alpha3    
kind: VirtualService
metadata:
  name: nginx-route
spec:
  hosts: 
  - nginx-service
  http:
    - fault:
        delay:
          fixedDelay: 10s
          percentage: 
            value: 100
      route:
        - destination:
            host: nginx-service
            subset: all

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-destination
spec:
  host: nginx-service
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: "x-user"
  subsets:
  - name: all
    labels:
      app: nginx
